added link to color scheme

--- a/style.css
+++ b/style.css
@@ -1,13 +1,7 @@
 /*
 font-family: 'Amaranth', sans-serif;
 font-family: 'Titillium Web', sans-serif;
-https://coolors.co/721121-a5402d-f15156-ffc07f-ffcf99
-
-   header
-   ------
-      bg: #e8edf3
-      text: #22264b
-      highlight: #22264b
+http://www.awwwards.com/trendy-web-color-palettes-and-material-design-color-schemes-tools.html
 */
 
 body{
